--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # compiled output
 /dist
 /node_modules
-/.vscode
-.env
 
 # Logs
 logs
@@ -35,3 +33,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# env
+.env
