--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "bcrypt": "^5.0.1",
+    "dotenv": "^14.2.0",
     "mailhog": "^4.16.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
