--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs-modules/mailer": "^1.3.17",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "bcrypt": "^5.0.1",
+    "firebase-admin": "^4.2.1",
     "mailhog": "^4.16.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
@@ -41,7 +42,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.12.4",
     "sequelize-typescript": "^2.1.1",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
