--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestlab/google-recaptcha": "^2.1.2",
     "bcrypt": "^5.0.1",
+    "firebase": "^9.6.4",
     "firebase-admin": "^4.2.1",
     "mailhog": "^4.16.0",
     "mysql2": "^2.3.3",
